# oz_django

./: manage.py  pyproject.toml
.github/workflows/: ci.yml
oz_04django/: asgi.py  settings.py  urls.py  wsgi.py
tabom/migrations/: 0001_initial.py
tabom/tests/: test_like_service.py
