[tool.poetry]
name = "oz-04django"
version = "0.1.0"
description = ""
authors = ["hyo00000 <gywkdk80@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^ 3.12"
django = "^5.1.1"
d = "^0.2.2"
isort = "^5.13.2"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.13.2"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
