[tool.poetry]
name = "oz-04django"
version = "0.1.0"
description = ""
authors = ["hyo00000 <gywkdk80@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^ 3.12"
django = "^5.1.1"
d = "^0.2.2"
isort = "^5.13.2"
pymysql = "^1.1.1"
cryptography = "^43.0.1"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.13.2"
mypy = "^1.11.2"
django-stubs = "^5.0.4"
types-pymysql = "^1.1.0.20240524"
coverage = "^7.6.1"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
python_version = 3.12
strict = true

[[tool.mypy.overrides]]
module = "*.migrations.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "manage"
ignore_errors = true

[tool.django-stubs]
django_settings_module = "oz_04django.settings"

[tool.coverage.report]
fail_under = 80

[tool.coverage.run]
omit = [
    ".mypy_cache/**/*",
    "*/migrations/*",
    "*/*test*.py/",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

